--- a/index.html
+++ b/index.html
@@ -25,30 +25,31 @@
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead description">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead">08/12/2021</p>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead"></p>
     </header>
+    
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row time-block">
+      <div id="9am" class="row time-block">
         <div class="col hour">9am</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="description col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
+          <button type="button" class="saveBtn">Save</button>
         </div>
       </div>
 
-      <div class="row time-block">
+      <div id="10am" class="row time-block">
         <div class="col hour">10am</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="description col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
+          <button type="button" class="saveBtn">Save</button>
         </div>
       </div>
 
-      <div class="row time-block">
+      <!-- <div class="row time-block">
         <div class="col hour">11am</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
           <button type="button" id="saveBtn" class="saveBtn">Save</button>
         </div>
@@ -56,7 +57,7 @@
 
       <div class="row time-block">
         <div class="col hour">12pm</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
           <button type="button" id="saveBtn" class="saveBtn">Save</button>
         </div>
@@ -64,7 +65,7 @@
 
       <div class="row time-block">
         <div class="col hour">1pm</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
           <button type="button" id="saveBtn" class="saveBtn">Save</button>
         </div>
@@ -72,7 +73,7 @@
 
       <div class="row time-block">
         <div class="col hour">2pm</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
           <button type="button" id="saveBtn" class="saveBtn">Save</button>
         </div>
@@ -80,7 +81,7 @@
 
       <div class="row time-block">
         <div class="col hour">3pm</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
           <button type="button" id="saveBtn" class="saveBtn">Save</button>
         </div>
@@ -88,7 +89,7 @@
 
       <div class="row time-block">
         <div class="col hour">4pm</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
           <button type="button" id="saveBtn" class="saveBtn">Save</button>
         </div>
@@ -96,13 +97,11 @@
 
       <div class="row time-block">
         <div class="col hour">5pm</div>
-        <div class="col-7"><textarea name="userInputArea" id="textArea" cols="1" rows="1"></textarea></div>
+        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
           <button type="button" id="saveBtn" class="saveBtn">Save</button>
         </div>
-      </div>
-
-
+      </div> -->
 
           <!-- Timeblocks go here -->
 
