--- a/index.html
+++ b/index.html
@@ -1,53 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    
-    <div class="container">
-      <!-- Timeblocks go here -->
-      <div id="9am" class="row time-block">
-        <div class="col hour">9am</div>
-        <textarea name="text_area" class="description col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Work Day Scheduler</title>
+</head>
 
-      <div id="10am" class="row time-block">
-        <div class="col hour">10am</div>
-        <textarea name="text_area" class="description col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" class="saveBtn">Save</button>
-        </div>
-      </div>
+<body>
+  <header id="jumbo" class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead time-block"></p>
+    <p id="savedMessage" class="lead"></p>
+  </header>
 
-      <!-- <div class="row time-block">
+  <!-- Time blocks go here -->
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">8 am</div>
+      <textarea id="am8" class="col-10 description" type="text"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
+    </div>
+  </div>
+
+  <div id="10am" class="row time-block">
+    <div class="col hour">10am</div>
+    <textarea name="text_area" class="description col-7" id="text-area" cols="1" rows="1"></textarea>
+    <div class="col">
+      <button type="button" class="saveBtn">Save</button>
+    </div>
+  </div>
+
+  <!-- <div class="row time-block">
         <div class="col hour">11am</div>
         <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
         <div class="col">
@@ -103,9 +96,9 @@
         </div>
       </div> -->
 
-          <!-- Timeblocks go here -->
+  <!-- Timeblocks go here -->
 
-          <!--<div class="row time-block">
+  <!--<div class="row time-block">
             <div class="col hour d-flex justify-content-around">9am</div>
             <div class="col-8 d-flex justify-content-center">Input Field Here</div>
             <div class="col d-flex justify-content-center">
@@ -113,10 +106,11 @@
             </div>
           </div> -->
 
-    </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/javascript/script.js" ></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./assets/javascript/script.js"></script>
+</body>
+
 </html>
