--- a/index.html
+++ b/index.html
@@ -32,69 +32,69 @@
     </div>
   </div>
 
-  <div id="10am" class="row time-block">
-    <div class="col hour">10am</div>
-    <textarea name="text_area" class="description col-7" id="text-area" cols="1" rows="1"></textarea>
-    <div class="col">
-      <button type="button" class="saveBtn">Save</button>
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">9 am</div>
+      <textarea id="am9" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
 
-  <!-- <div class="row time-block">
-        <div class="col hour">11am</div>
-        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
-        </div>
-      </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">10 am</div>
+      <textarea id="am10" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
+    </div>
+  </div>
 
-      <div class="row time-block">
-        <div class="col hour">12pm</div>
-        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
-        </div>
-      </div>
+  <div class="row time-block">
+    <div class="col hour">12pm</div>
+    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
+    <div class="col">
+      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+    </div>
+  </div>
 
-      <div class="row time-block">
-        <div class="col hour">1pm</div>
-        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
-        </div>
-      </div>
+  <div class="row time-block">
+    <div class="col hour">1pm</div>
+    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
+    <div class="col">
+      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+    </div>
+  </div>
 
-      <div class="row time-block">
-        <div class="col hour">2pm</div>
-        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
-        </div>
-      </div>
+  <div class="row time-block">
+    <div class="col hour">2pm</div>
+    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
+    <div class="col">
+      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+    </div>
+  </div>
 
-      <div class="row time-block">
-        <div class="col hour">3pm</div>
-        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
-        </div>
-      </div>
+  <div class="row time-block">
+    <div class="col hour">3pm</div>
+    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
+    <div class="col">
+      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+    </div>
+  </div>
 
-      <div class="row time-block">
-        <div class="col hour">4pm</div>
-        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
-        </div>
-      </div>
+  <div class="row time-block">
+    <div class="col hour">4pm</div>
+    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
+    <div class="col">
+      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+    </div>
+  </div>
 
-      <div class="row time-block">
-        <div class="col hour">5pm</div>
-        <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-        <div class="col">
-          <button type="button" id="saveBtn" class="saveBtn">Save</button>
-        </div>
-      </div> -->
+  <div class="row time-block">
+    <div class="col hour">5pm</div>
+    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
+    <div class="col">
+      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+    </div>
+  </div>
 
   <!-- Timeblocks go here -->
 
