--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
     </div>
   </div>
 
-  <div class="row time-block">
-    <div class="col hour">12pm</div>
-    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-    <div class="col">
-      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+  <div class="container">
+    <div class="row">
+        <div class="col-1 hour">11 am</div>
+        <textarea id="am11" class="col-10 description"></textarea>
+        <button type="button" class="col-1 saveBtn">Save</button>
     </div>
-  </div>
+</div>
 
-  <div class="row time-block">
-    <div class="col hour">1pm</div>
-    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-    <div class="col">
-      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+<div class="container">
+    <div class="row">
+        <div class="col-1 hour">12 pm</div>
+        <textarea id="pm12" class="col-10 description"></textarea>
+        <button type="button" class="col-1 saveBtn">Save</button>
     </div>
-  </div>
+</div>
 
-  <div class="row time-block">
-    <div class="col hour">2pm</div>
-    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-    <div class="col">
-      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+<div class="container">
+    <div class="row">
+        <div class="col-1 hour">1 pm</div>
+        <textarea id="pm1" class="col-10 description"></textarea>
+        <button type="button" class="col-1 saveBtn">Save</button>
     </div>
-  </div>
+</div>
 
   <div class="row time-block">
     <div class="col hour">3pm</div>
