--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Time blocks go here -->
   <div class="container">
     <div class="row">
-      <div class="col-1 hour">8 am</div>
+      <div class="col-1 hour">8am</div>
       <textarea id="am8" class="col-10 description" type="text"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
@@ -34,7 +34,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-1 hour">9 am</div>
+      <div class="col-1 hour">9am</div>
       <textarea id="am9" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
@@ -42,7 +42,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-1 hour">10 am</div>
+      <div class="col-1 hour">10am</div>
       <textarea id="am10" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
@@ -50,66 +50,69 @@
 
   <div class="container">
     <div class="row">
-        <div class="col-1 hour">11 am</div>
-        <textarea id="am11" class="col-10 description"></textarea>
-        <button type="button" class="col-1 saveBtn">Save</button>
+      <div class="col-1 hour">11am</div>
+      <textarea id="am11" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
     </div>
-</div>
+  </div>
 
-<div class="container">
+  <div class="container">
     <div class="row">
-        <div class="col-1 hour">12 pm</div>
-        <textarea id="pm12" class="col-10 description"></textarea>
-        <button type="button" class="col-1 saveBtn">Save</button>
+      <div class="col-1 hour">12pm</div>
+      <textarea id="pm12" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
     </div>
-</div>
+  </div>
 
-<div class="container">
+  <div class="container">
     <div class="row">
-        <div class="col-1 hour">1 pm</div>
-        <textarea id="pm1" class="col-10 description"></textarea>
-        <button type="button" class="col-1 saveBtn">Save</button>
-    </div>
-</div>
-
-  <div class="row time-block">
-    <div class="col hour">3pm</div>
-    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-    <div class="col">
-      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+      <div class="col-1 hour">1pm</div>
+      <textarea id="pm1" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
 
-  <div class="row time-block">
-    <div class="col hour">4pm</div>
-    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-    <div class="col">
-      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">2pm</div>
+      <textarea id="pm2" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
 
-  <div class="row time-block">
-    <div class="col hour">5pm</div>
-    <textarea name="text_area" class="col-7" id="text-area" cols="1" rows="1"></textarea>
-    <div class="col">
-      <button type="button" id="saveBtn" class="saveBtn">Save</button>
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">3pm</div>
+      <textarea id="pm3" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
 
-  <!-- Timeblocks go here -->
-
-  <!--<div class="row time-block">
-            <div class="col hour d-flex justify-content-around">9am</div>
-            <div class="col-8 d-flex justify-content-center">Input Field Here</div>
-            <div class="col d-flex justify-content-center">
-              <button type="button" id="saveBtn" class="saveBtn">Save</button>
-            </div>
-          </div> -->
-
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">4pm</div>
+      <textarea id="pm4" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
+    </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">5pm</div>
+      <textarea id="pm5" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-1 hour">6pm</div>
+      <textarea id="pm6" class="col-10 description"></textarea>
+      <button type="button" class="col-1 saveBtn">Save</button>
+    </div>
+  </div>
+
+  </div>
   <script src="./assets/javascript/script.js"></script>
 </body>
 
