--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header id="jumbo" class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead time-block"></p>
+    <p id="currentTime" class="lead time-block"></p>
     <p id="savedMessage" class="lead"></p>
   </header>
 
@@ -27,7 +27,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">8am</div>
-      <textarea id="am8" class="col-10 description" type="text"></textarea>
+      <textarea id="8am" class="col-10 description" type="text"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">9am</div>
-      <textarea id="am9" class="col-10 description"></textarea>
+      <textarea id="9am" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -43,7 +43,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">10am</div>
-      <textarea id="am10" class="col-10 description"></textarea>
+      <textarea id="10am" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">11am</div>
-      <textarea id="am11" class="col-10 description"></textarea>
+      <textarea id="11am" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -59,7 +59,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">12pm</div>
-      <textarea id="pm12" class="col-10 description"></textarea>
+      <textarea id="12pm" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -67,7 +67,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">1pm</div>
-      <textarea id="pm1" class="col-10 description"></textarea>
+      <textarea id="1pm" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -75,7 +75,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">2pm</div>
-      <textarea id="pm2" class="col-10 description"></textarea>
+      <textarea id="2pm" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -83,7 +83,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">3pm</div>
-      <textarea id="pm3" class="col-10 description"></textarea>
+      <textarea id="3pm" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -91,7 +91,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">4pm</div>
-      <textarea id="pm4" class="col-10 description"></textarea>
+      <textarea id="4pm" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -99,7 +99,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">5pm</div>
-      <textarea id="pm5" class="col-10 description"></textarea>
+      <textarea id="5pm" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
@@ -107,7 +107,7 @@
   <div class="container">
     <div class="row">
       <div class="col-1 hour">6pm</div>
-      <textarea id="pm6" class="col-10 description"></textarea>
+      <textarea id="6pm" class="col-10 description"></textarea>
       <button type="button" class="col-1 saveBtn">Save</button>
     </div>
   </div>
